gonggo_SOURCES += \
	gear/confvar.c gear/confvar.h \
	gear/db.c gear/db.h \
	gear/define.h \
	gear/error.h \
	gear/globaldata.c gear/globaldata.h \
	gear/heartbeat.c gear/heartbeat.h \
	gear/log.c gear/log.h \
	gear/proxyactivator.c gear/proxyactivator.h \
	gear/proxychannel.c gear/proxychannel.h \
	gear/proxyheartbeat.c gear/proxyheartbeat.h \
	gear/proxysubscribe.c gear/proxysubscribe.h \
	gear/proxythreadtable.c gear/proxythreadtable.h \
	gear/reply.c gear/reply.h \
	gear/requesttable.c gear/requesttable.h \
	gear/respondretain.c gear/respondretain.h \
	gear/service.c gear/service.h \
	gear/servicestatus.c gear/servicestatus.h \
	gear/work.c gear/work.h \
	gear/wshandler.c gear/wshandler.h
