gonggo_SOURCES += \
	gear/alivemutex.c gear/alivemutex.h \
	gear/clientconnectiontable.c gear/clientconnectiontable.h \
	gear/clientproxynametable.c gear/clientproxynametable.h \
	gear/clientreply.c gear/clientreply.h \
	gear/clientrequesttable.c gear/clientrequesttable.h \
	gear/clientservice.c gear/clientservice.h \
	gear/clientservicetable.c gear/clientservicetable.h \
	gear/clienttimeout.c gear/clienttimeout.h \
	gear/confvar.c gear/confvar.h \
	gear/db.c gear/db.h \
	gear/dbresponddrain.c gear/dbresponddrain.h \
	gear/define.h \
	gear/error.h \
	gear/globaldata.h \
	gear/gonggouuid.c gear/gonggouuid.h \
	gear/log.c gear/log.h \
	gear/proxy.c gear/proxy.h \
	gear/proxyactivator.c gear/proxyactivator.h \
	gear/proxyalive.c gear/proxyalive.h \
	gear/proxyalivethreadtable.c gear/proxyalivethreadtable.h \
	gear/proxychannel.c gear/proxychannel.h \
	gear/proxychannelthreadtable.c gear/proxychannelthreadtable.h \
	gear/proxysubscribe.c gear/proxysubscribe.h \
	gear/proxysubscribethreadtable.c gear/proxysubscribethreadtable.h \
	gear/proxyterminatearray.c gear/proxyterminatearray.h \
	gear/proxyterminator.c gear/proxyterminator.h \
	gear/servicestatus.h \
	gear/strarr.c gear/strarr.h \
	gear/util.c gear/util.h \
	gear/work.c gear/work.h\
	gear/wshandler.c gear/wshandler.h
